specs/blueprints/errors/validation/expected_sections_got_fieldset.eno
# Expecting sections but getting a fieldset with one item

-- input
fieldset:
entry = value
-- input

-- javascript
parse(input).sections('fieldset');
-- javascript

-- php
Enolib\Parser::parse($input)->sections('fieldset');
-- php

-- python
enolib.parse(input).sections('fieldset')
-- python

-- ruby
Enolib.parse(input).sections('fieldset')
-- ruby

## ValidationError

-- text
Only sections with the key 'fieldset' were expected.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | entry = value
-- snippet

selection: [0,0] => [1,13]


# Expecting sections but getting a fieldset with empty lines and multiple entries

-- input
fieldset:

entry = value

entry = value

entry = value

-- input

-- javascript
parse(input).sections('fieldset');
-- javascript

-- php
Enolib\Parser::parse($input)->sections('fieldset');
-- php

-- python
enolib.parse(input).sections('fieldset')
-- python

-- ruby
Enolib.parse(input).sections('fieldset')
-- ruby

## ValidationError

-- text
Only sections with the key 'fieldset' were expected.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | 
 *    3 | entry = value
 *    4 | 
 *    5 | entry = value
 *    6 | 
 *    7 | entry = value
      8 | 
-- snippet

selection: [0,0] => [6,13]

# Expecting sections but getting a fieldset with two entries with comments

-- input
fieldset:
> comment
entry = value

> comment
entry = value
-- input

-- javascript
parse(input).sections('fieldset');
-- javascript

-- php
Enolib\Parser::parse($input)->sections('fieldset');
-- php

-- python
enolib.parse(input).sections('fieldset')
-- python

-- ruby
Enolib.parse(input).sections('fieldset')
-- ruby

## ValidationError

-- text
Only sections with the key 'fieldset' were expected.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | > comment
 *    3 | entry = value
 *    4 | 
 *    5 | > comment
 *    6 | entry = value
-- snippet

selection: [0,0] => [5,13]
